--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,17 @@ body {
     max-width: 1014px;
     padding: 0 15px;
     margin: 0 auto 21px;
+    position: relative;
+    z-index: 2;
+    bottom: 820px;
 }
 .container{
     max-width: 710px;
     margin: auto;
     background-color: white;
+    position: relative;
+    z-index: 2;
+    bottom: 820px;
 }
 .video_title{
     background-color: #98161b;
@@ -29,7 +35,7 @@ body {
     font-size: 20px;
 }
 .container .video_block{
-    padding: 62px 74px 125px;
+    padding: 62px 74px 105px;
 }
 .video_block .video{
     background-color: #e7e7e7;
@@ -52,13 +58,16 @@ body {
     margin-top: 20px;
 }
 .video_block p{
+    display: block;
     font-size: 13px;
     color: #98161b;
+    margin-bottom: 20px;
 }
 .social{
     position: fixed;
     right: 0;
     top: 262px;
+    z-index: 3;
 }
 .social a {
     display: flex;
@@ -80,9 +89,17 @@ body {
 footer{
     background-color: black;
     height: 480px;
-}
-.container{
     position: relative;
-    top: 50px;
+    z-index: 1;
+    bottom: 870px;
 }
+.pizza_bg{
+    height: 820px;
+    background-image: url("../images/bg_main.jpg");
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: 100%;
+    z-index: 0;
+    bottom: 20px;
 
+}
